--- a/site/pages/impress.html
+++ b/site/pages/impress.html
@@ -4,8 +4,9 @@ title: "Impress"
 
 <section>
     <p>Jan Kühle<br>
-    An der Hollerstaude 27<br>
-    63674 Altenstadt</p>
+    43 Avebury Court<br>
+    London<br>
+    N1 5DD</p>
 </section>
 <section>
     <h3>Contact information</h3>
