--- a/src/projects/index.html
+++ b/src/projects/index.html
@@ -4,21 +4,24 @@ title: Projects
 ---
 
 <ul class="big-list">
-  {% for project in collections.projects | reverse -%}
-  <li>
-    <a href="{{ project.url }}">
-      <h3>{{ project.data.metadata.title }}</h3>
-      <img class="projects-icon" src="{{ 'icon.png' | image(project) }}" alt="" />
-      <div class="projects-description">
-        {{ project.data.metadata.short_description }}
-      </div>
-      <div class="projects-tags">
-        {%- for tag in project.data.metadata.tags -%}
-        {{ ", " if not loop.first }}{{ tag }}
-        {%- endfor -%}
-      </div>
-      <div class="projects-clear"></div>
-    </a>
-  </li>
-  {%- endfor %}
+	{% for project in collections.projects | reverse -%}
+	<li>
+		<a href="{{ project.url }}">
+			<h3>{{ project.data.metadata.title }}</h3>
+			<img
+				class="projects-icon"
+				src="{{ 'icon.png' | image(project) }}"
+				alt=""
+			/>
+			<div class="projects-description">
+				{{ project.data.metadata.short_description }}
+			</div>
+			<div class="projects-tags">
+				{%- for tag in project.data.metadata.tags -%} {{ ", " if not loop.first
+				}}{{ tag }} {%- endfor -%}
+			</div>
+			<div class="projects-clear"></div>
+		</a>
+	</li>
+	{%- endfor %}
 </ul>
