Update index text

--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,14 @@ layout: layout.njk
 	<img src="/static/images/about_arrow.png" alt="" />
 	<p>Hi, this is me.</p>
 	<p>
-		I'm a passionate full stack web developer with an additional interest in
-		Android apps.
+		I'm a passionate full stack developer with a particular interest in the web.
 	</p>
 </div>
 
 <div class="index-more">
 	<p>
-		Check out my projects and posts about things I come across while hacking on
-		the projects:
+		On this website you can find a list of projects I recently worked on, as
+		well as a few old blog posts.
 	</p>
 
 	<nav>
